--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,89 @@
 
-<div>
+<!--<div class="main_container">
   <app-menu></app-menu>
   <app-cv></app-cv>
   <app-footer></app-footer>
-</div>
+</div>-->
 
+<!-- PILL -->
+<ul class="nav nav-pills center-pills" id="pills-tab" role="tablist">
+  <li class="nav-main-item">
+    <a class="nav-link-logo" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
+      aria-controls="pills-home" aria-selected="true"><img src="../assets/images/avatar.png" style="width: 100px;height:110px"></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="pills-experiences-tab" data-toggle="pill" href="#pills-experiences" role="tab"
+      aria-controls="pills-experiences">Expériences</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="pills-formations-tab" data-toggle="pill" href="#pills-formations" role="tab"
+      aria-controls="pills-formations">Formations</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="pills-competences-tab" data-toggle="pill" href="#pills-competences" role="tab"
+      aria-controls="pills-competences">Compétences</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="pills-projets-tab" data-toggle="pill" href="#pills-projets" role="tab"
+      aria-controls="pills-projets">Projets</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="pills-propos-tab" data-toggle="pill" href="#pills-propos" role="tab"
+      aria-controls="pills-propos">À propos</a>
+  </li>
+</ul>
+<!-- PILL -->
+
+
+<!-- DIVIDER -->
+<svg class="editorial"
+viewBox="0 24 150 30 "
+preserveAspectRatio="none">
+<defs>
+<path id="gentle-wave"
+d="M-160 44c30 0 
+58-18 88-18s
+58 18 88 18 
+58-18 88-18 
+58 18 88 18
+v44h-352z" />
+</defs>
+<g class="parallax1">
+<use xlink:href="#gentle-wave" x="50" y="3" fill="#f461c1"/>
+</g>
+<g class="parallax2">
+<use xlink:href="#gentle-wave" x="50" y="0" fill="#4579e2"/>
+</g>
+ <g class="parallax3">
+<use xlink:href="#gentle-wave" x="50" y="9" fill="#3461c1"/>
+</g>
+<g class="parallax4">
+<use xlink:href="#gentle-wave" x="50" y="6" fill="#fff"/>  
+</g>
+</svg>
+<!-- DIVIDER -->
+
+
+<!-- CONTENT PILL -->
+<div class="tab-content pt-2 pl-1" id="pills-tabContent">
+  <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+    <app-cv></app-cv>
+  </div>
+  <div class="tab-pane fade" id="pills-experiences" role="tabpanel" aria-labelledby="pills-experiences-tab">
+    <app-footer></app-footer>
+  </div>
+  <div class="tab-pane fade" id="pills-formations" role="tabpanel" aria-labelledby="pills-formations-tab">
+    <app-footer></app-footer>
+  </div>
+  <div class="tab-pane fade" id="pills-competences" role="tabpanel" aria-labelledby="pills-competences-tab">
+
+  </div>
+  <div class="tab-pane fade" id="pills-projets" role="tabpanel" aria-labelledby="pills-projets-tab">
+    <app-cv></app-cv>
+  </div>
+  <div class="tab-pane fade" id="pills-propos" role="tabpanel" aria-labelledby="pills-propos-tab">
+    <app-cv></app-cv>
+  </div>
+</div>
+<!-- CONTENT PILL -->
 
