--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <ul class="nav justify-content-center">
     <li class="nav-item">
-      <a class="nav-link active" href="#">Active</a>
+      <a class="nav-link" href="#">Active</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
@@ -8,4 +8,31 @@
     <li class="nav-item">
       <a class="nav-link" href="#">Link</a>
     </li>
-  </ul>
+</ul>
+
+  
+<svg class="editorial"
+viewBox="0 24 150 30 "
+preserveAspectRatio="none">
+<defs>
+<path id="gentle-wave"
+d="M-160 44c30 0 
+58-18 88-18s
+58 18 88 18 
+58-18 88-18 
+58 18 88 18
+v44h-352z" />
+</defs>
+<g class="parallax1">
+<use xlink:href="#gentle-wave" x="50" y="3" fill="#f461c1"/>
+</g>
+<g class="parallax2">
+<use xlink:href="#gentle-wave" x="50" y="0" fill="#4579e2"/>
+</g>
+ <g class="parallax3">
+<use xlink:href="#gentle-wave" x="50" y="9" fill="#3461c1"/>
+</g>
+<g class="parallax4">
+<use xlink:href="#gentle-wave" x="50" y="6" fill="#fff"/>  
+</g>
+</svg>
