--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
-@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 
 
 @font-face{
-    font-family:Lobster;
-    src: url('assets/fonts/Lobster-Regular.ttf') format ('truetype');
+    font-family: 'lobster';
+    src: url('assets/fonts/Lobster-Regular.ttf') format('truetype');
 }
 
 html, body { 
