--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,6 @@
 }
 
 #pills-tab{
-    position: sticky;
-    top:0;
     z-index: 4;
     width: 100%;
     background-color: #03396c;
@@ -13,11 +11,15 @@
 
 #pills-home-tab{
     position:relative;
-    padding-right: 100px;
+    padding-right: 50px;
+}
+.nav-main-item{
+    margin-top:auto;
+    margin-bottom: auto;
 }
 
 .tab-content{
-    position: relative;
+    margin-top: 5%;
 }
 
 .nav-link.active{
@@ -28,26 +30,50 @@
 
 .nav-link.active::before{
     content: "";
-    border-bottom: 2px solid;
-    -webkit-border-image: -webkit-linear-gradient(left, #f093fb 0%, #f461c1 100%) 10 10 10 10;
+    border-bottom: 3px solid;
+    -webkit-border-image: -webkit-linear-gradient(left,#f6d365 0%, #fda085 100%) 10 10 10 10;
     width: 110%;
     position: absolute;
     right: -5%;
     bottom: 5%;
 }
 
-.nav-main-item{
-    margin-top:auto;
-    margin-bottom: auto;
-}
-
 .nav-item{
-    font-family: 'Lobster', cursive;
-    font-size: 28px;
+    //font-family: 'Lobster', cursive;
+    font-size: 26px;
     font-weight: normal;
-    margin: 1.5% 1% 2.5% 1%;
+    margin: 2% 1% 2% 1%;
 }
 
+.nav-item-s{
+  font-size: 20px;
+  position: relative;
+  text-align: right;
+  padding-right: 15px;
+}
+
+@media screen and (max-width: 1100px){
+  .nav-item {
+    font-size: 12px;
+  }
+  #pills-tab {
+    display:none;
+  }
+}
+
+@media screen and (min-width: 1100px){
+  .navbar{
+    display: none;
+  }
+}
+
+.navbar{
+  background-color: #03396c;
+}
+
+.navbar .navbar-toggler-icon {
+  background-image: url('https://mdbootstrap.com/img/svg/hamburger1.svg?color=f6d365');
+}
 
 a{
     color: #fff;
@@ -58,10 +84,9 @@ a{
 }
 
 .editorial {
-    position: fixed;
     width: 100%;
     height: 10%;
-    min-height: 25px;
+    min-height: 30px;
     max-height: 50px;
     margin: 0;
     z-index:5;
