--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,73 +1,9 @@
-ul{
-    height: 70px;
+@media screen and (min-width: 1100px){
+  .navbar{
+    display: none;
+  }
 }
-.nav-item{
-    font-size: 28px;
-    margin: 0 5% 0 5%;
+
+.navbar .navbar-toggler-icon {
+  background-image: url('https://mdbootstrap.com/img/svg/hamburger1.svg?color=6a1b9a');
 }
-.editorial {
-    display: block;
-    width: 100%;
-    height: 40px;
-    max-height: 40px;
-    margin: 0;
-    z-index:5;
-    bottom:0;
-  }
-  
-  .parallax1 > use {
-    animation: move-forever1 10s linear infinite;
-    &:nth-child(1) {
-      animation-delay: -2s;
-    }
-  }
-  .parallax2 > use {
-    animation: move-forever2 8s linear infinite;
-    &:nth-child(1) {
-      animation-delay: -2s;
-    }
-  }
-  .parallax3 > use {
-    animation: move-forever3 6s linear infinite;
-    &:nth-child(1) {
-      animation-delay: -2s;
-    }
-  }
-  .parallax4 > use {
-    animation: move-forever4 4s linear infinite;
-    &:nth-child(1) {
-      animation-delay: -2s;
-    }
-  }
-  @keyframes move-forever1 {
-    0% {
-      transform: translate(85px, 0%);
-    }
-    100% {
-      transform: translate(-90px, 0%);
-    }
-  }
-  @keyframes move-forever2 {
-    0% {
-      transform: translate(-90px, 0%);
-    }
-    100% {
-      transform: translate(85px, 0%);
-    }
-  }
-  @keyframes move-forever3 {
-    0% {
-      transform: translate(85px, 0%);
-    }
-    100% {
-      transform: translate(-90px, 0%);
-    }
-  }
-  @keyframes move-forever4 {
-    0% {
-      transform: translate(-90px, 0%);
-    }
-    100% {
-      transform: translate(85px, 0%);
-    }
-  }
