--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>home works!</p>
+
+<section>
+    <div class="menu-row">
+        <app-menu></app-menu>
+    </div>
+
+        <div class="row">
+            <div class="col-md-5">
+                <!--<img class="profil" src='../../assets/images/photo-moi.png'>-->
+            </div>
+            <div class="col">
+                <h1>hi its me Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente</h1>
+                <div class= "test">
+
+                </div>
+            </div>
+        </div>
+</section>
