--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,49 +1,52 @@
-<!--Navbar-->
+<!-- NAVBAR -->
+<ul class="nav">
+    <li class="nav-item">
+        <a class="nav-link logo" href="#!"><img src="../../assets/images/logo-RP.png"
+                style="width:40px; height: 40px;"></a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#!">Expériences</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#!">Formations</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#!">Compétences</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#!">Projets</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#!">À propos</a>
+    </li>
+</ul>
+<!-- NAVBAR -->
+
+<!-- BURGER MENU -->
 <nav class="navbar">
-
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">Navbar</a>
-  
-    <!-- Collapse button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
-      aria-controls="navbarSupportedContent15" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-  
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent15">
-  
-      <!-- Links -->
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="../../app/app.component.html/#pills-home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../../app/app.component.html/#pills-formation">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-      </ul>
-      <!-- Links -->
-  
+    <a class="navbar-brand" href="#"><img src="../../assets/images/logo-RP.png"
+        style="width:40px; height: 40px;"></a>
+    <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
+        aria-label="Toggle navigation"><span class="dark-blue-text"><i class="fas fa-bars fa-1x"></i></span></button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item-burger">
+                <a class="nav-link-burger" href="#!">Expériences</a>
+            </li>
+            <li class="nav-item-burger">
+                <a class="nav-link-burger" href="#!">Formations</a>
+            </li>
+            <li class="nav-item-burger">
+                <a class="nav-link-burger" href="#!">Compétences</a>
+            </li>
+            <li class="nav-item-burger">
+                <a class="nav-link-burger" href="#!">Projets</a>
+            </li>
+            <li class="nav-item-burger">
+                <a class="nav-link-burger" href="#!">À propos</a>
+            </li>
+        </ul>
     </div>
-    <!-- Collapsible content -->
-  
-  </nav>
-  <!--/.Navbar-->
-
-  <div class="bs-example">
-      <nav class="nav nav-pills flex-column">
-          <a href="#" class="nav-item nav-link active">
-              <i class="fa fa-home"></i> Home
-          </a>
-          <a href="#" class="nav-item nav-link">
-              <i class="fa fa-user"></i> Profile
-          </a>
-          <a href="#" class="nav-item nav-link">
-              <i class="fa fa-envelope"></i> Messages
-          </a>
-          <a href="#" class="nav-item nav-link disabled" tabindex="-1">
-              <i class="fa fa-line-chart"></i> Reports
-          </a>
-      </nav>
-  </div>
+</nav>
+<!-- BURGER MENU -->
