--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,22 +1,5 @@
-<div class="navbar">
-        <div class="navbar-inner">
-        <a data-toggle="collapse" data-target=".nav-collapse" class="btn btn-navbar">
-          <i class="icon-bar"></i>
-          </a>
-        
-            <a class="brand" href="">New Icon Menu</a>
-        
-            <div class="nav-collapse">
-                <ul class="nav nav-pills pull-right">
-                    <li><a href=""><i class="icon-home icon-2x"></i> Home<br></a>
-                    </li>
-                    <li><a href=""><i class=" icon-pencil icon-2x"></i>About Us</a>
-                    </li>
-                    <li><a href=""><i class=" icon-briefcase icon-2x"></i>Portfolio</a>
-                    </li>
-                    <li><a href=""><i class=" icon-envelope icon-2x"></i>Contact Us</a>
-                    </li>
-                </ul>
-                 </div>
-               </div>
-             </div>
+<section>
+        <div class="menu-row">
+                <app-menu></app-menu>
+            </div>
+</section>
