--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,10 +9,17 @@
                 <!--<img class="profil" src='../../assets/images/photo-moi.png'>-->
             </div>
             <div class="col">
-                <h1>hi its me Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt voluptates rerum eveniet sapiente</h1>
-                <div class= "test">
-
+                <div class= "container experiences">
                 </div>
+                <div class= "container formations">
+                </div>
+                <div class= "container competences">
+                    </div>
+                    <div class= "container apropos">
+                        </div>
+            </div>
+            <div class="col-md-2">
+                
             </div>
         </div>
 </section>
