--- a/src/app/reserve/reserve.component.scss
+++ b/src/app/reserve/reserve.component.scss
@@ -72,7 +72,7 @@
   }
   
   .navbar .navbar-toggler-icon {
-  background-image: url('https://mdbootstrap.com/img/svg/hamburger1.svg?color=f6d365');
+  background-image: url('https://mdbootstrap.com/img/svg/hamburger1.svg?color=fff');
   }
   
   a{
