--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -1,1 +1,5 @@
-<p>formation works!</p>
+<section>
+        <div class="menu-row">
+                <app-menu></app-menu>
+            </div>
+    </section>
