--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,46 +5,48 @@ section{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    //margin-top:-90px;
     z-index: 1;
 }
 
-
-.profil{
-    width: 40%;
-    height: auto;
-    display:block;
-    margin-left: auto;
-    margin-right: auto;
+.col{
+    margin-top: 2%;
+}
+@media screen and (max-width: 768px){
+    section{
+        background-image: url('../../assets/images/background-portrait.jpg');
+    } 
 }
 
-.test{
+
+.container{
     position: relative;
-    width:100px;
-    height: 100px;
-    background-color: red;
+    width:70%;
+    height: 16vh;
+    border-radius: 10px;
+    background-color:rgba(0,0,0,0.5);
     transition: all .5s ease-in-out;
+    margin: 3% 3% 3% 3%;
+    box-shadow: 5px -5px 10px rgba(0,0,0,0.8);
 }
 
-.test:hover{
-    position: relative;
-    //left: 20px;
-    //transform: scale(1.5);
-    //transform: rotate(20deg);
-    //transform: skewY(20deg);
-    transform: translate(20px,20px);
+.container:hover{
+    transform: translate(5px,-5px);
 }
 
+.experiences{
+    border: 1.5px solid #4669a5;
+}
 
-/*@media screen and (max-width: 900px){
-    .col-md-5{
-        display: none;
-    }
-    .col{
-        background-image: url('../../assets/images/photo-moi.png');
-        height: 100%;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
-}*/
+.formations{
+    border: 1.5px solid rgb(193, 239, 255);
+    margin-left:30%;
+}
+
+.competences{
+    border: 1.5px solid #FFDD83;
+}
+
+.apropos{
+    border: 1.5px solid #31BCCC;
+    margin-left:30%;
+}
