--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,52 +1,46 @@
 <!-- NAVBAR -->
 <ul class="nav">
     <li class="nav-item">
-        <a class="nav-link logo" href="#!"><img src="../../assets/images/logo-RP.png"
-                style="width:40px; height: 40px;"></a>
+        <a class="nav-link logo" routerLink="/cv"><img src="../../assets/images/logo-RP.png" style="width: 45px; height: 45px;"></a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#!">Expériences</a>
+        <a class="nav-link exp" routerLink="/experiences" routerLinkActive="active-link-darkblue">Expériences</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#!">Formations</a>
+        <a class="nav-link form" routerLink="/formations" routerLinkActive="active-link-lightblue">Formations</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#!">Compétences</a>
+        <a class="nav-link comp" routerLink="/competences" routerLinkActive="active-link-yellow">Compétences</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#!">Projets</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#!">À propos</a>
+        <a class="nav-link prop" routerLink="/apropos" routerLinkActive="active-link-cyan">À propos</a>
     </li>
 </ul>
 <!-- NAVBAR -->
 
 <!-- BURGER MENU -->
 <nav class="navbar">
-    <a class="navbar-brand" href="#"><img src="../../assets/images/logo-RP.png"
-        style="width:40px; height: 40px;"></a>
-    <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse"
-        data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
-        aria-label="Toggle navigation"><span class="dark-blue-text"><i class="fas fa-bars fa-1x"></i></span></button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+    <a class="navbar-brand" routerLink="/cv"><img src="../../assets/images/logo-RP.png" style="width:45px; height: 45px;"></a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item-burger">
-                <a class="nav-link-burger" href="#!">Expériences</a>
+                <a class="nav-link-burger exp" routerLink="/experiences" routerLinkActive="active-link-darkblue">Expériences</a>
             </li>
             <li class="nav-item-burger">
-                <a class="nav-link-burger" href="#!">Formations</a>
+                <a class="nav-link-burger form" routerLink="/formations" routerLinkActive="active-link-lightblue">Formations</a>
             </li>
             <li class="nav-item-burger">
-                <a class="nav-link-burger" href="#!">Compétences</a>
+                <a class="nav-link-burger comp" routerLink="/competences" routerLinkActive="active-link-yellow">Compétences</a>
             </li>
             <li class="nav-item-burger">
-                <a class="nav-link-burger" href="#!">Projets</a>
-            </li>
-            <li class="nav-item-burger">
-                <a class="nav-link-burger" href="#!">À propos</a>
+                <a class="nav-link-burger prop" routerLink="/apropos" routerLinkActive="active-link-cyan">À propos</a>
             </li>
         </ul>
     </div>
 </nav>
-<!-- BURGER MENU -->
+<!--  BURGER MENU -->
