--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,60 @@
-
 <section>
     <div class="menu-row">
         <app-menu></app-menu>
     </div>
 
-        <div class="row">
-            <div class="col-md-5">
-                <!--<img class="profil" src='../../assets/images/photo-moi.png'>-->
-            </div>
-            <div class="col">
-                <div class= "container experiences">
-                </div>
-                <div class= "container formations">
-                </div>
-                <div class= "container competences">
-                    </div>
-                    <div class= "container apropos">
+    <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col">
+            <div class="container c-left experiences" routerLink="/experiences">
+                <div class="row-content">
+                    <div class="anim-logo logo-e">
+                        <div class="title right">
+                            <h1>Expériences</h1>
                         </div>
+                        <!--<div class="subtitle">
+                            <h2>remi-papillier@hotmail.fr</h2>
+                        </div>-->
+                    </div>
+                </div>
             </div>
-            <div class="col-md-2">
-                
+            <div class="container c-right formations" routerLink="/formations">
+                <div class="row-content">
+                    <div class="anim-logo logo-f">
+                        <div class="title left">
+                            <h1>Formations</h1>
+                        </div>
+                        <!--<div class="subtitle">
+                            <h2>remi-papillier@hotmail.fr</h2>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+            <div class="container c-left competences" routerLink="/competences">
+                <div class="row-content">
+                    <div class="anim-logo logo-c">
+                        <div class="title right">
+                            <h1>Compétences</h1>
+                        </div>
+                        <!--<div class="subtitle">
+                            <h2>remi-papillier@hotmail.fr</h2>
+                        </div>-->
+                    </div>
+                </div>
+            </div>
+            <div class="container c-right apropos" routerLink="/apropos">
+                <div class="row-content">
+                    <div class="anim-logo logo-p">
+                        <div class="title left">
+                            <h1>À propos</h1>
+                        </div>
+                        <!--<div class="subtitle">
+                            <h2>remi-papillier@hotmail.fr</h2>
+                        </div>-->
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="col-md-2"></div>
+    </div>
 </section>
