--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -1,5 +1,10 @@
 <section>
         <div class="menu-row">
                 <app-menu></app-menu>
-            </div>
-    </section>
+        </div>
+        <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col"></div>
+                <div class="col-md-4" id="perso"></div>
+        </div>
+</section>
