--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -6,3 +6,15 @@ section{
     background-size: cover;
     z-index: 1;
 }
+
+.row{
+    height: 85%;
+}
+
+#perso{
+    background-image: url('../../assets/images/perso-formation.png');
+    height: 100%;
+    background-position: left;
+    background-size:contain;
+    background-repeat: no-repeat;
+}
