--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 
 @font-face{
     font-family: 'comfortaa';
-    src: url('assets/fonts/comfortaa-semibold.ttf') format('truetype');
+    src: url("assets/fonts/Comfortaa-SemiBold.ttf") format("truetype");
 }
 
 html, body { 
