--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,57 +4,102 @@
     </div>
 
     <div class="row">
-        <div class="col-md-4"></div>
+        <div class="col-md-4 empty-col"></div>
         <div class="col">
+            <div class="container c-right apropos" routerLink="/apropos">
+                <div class="row-content">
+                    <div class="col-md-8 title left">
+                        <div class="title-item">
+                            <h1>À propos</h1>
+                            <div class="carousel slide" data-ride="carousel" data-interval="5000" pause="false">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <p>Je m'appelle Rémi</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>J'ai 21ans, je viens de Paris</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>Passionné de graphisme et design</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 anim-logo logo-p"></div>
+                </div>
+            </div>
             <div class="container c-left experiences" routerLink="/experiences">
                 <div class="row-content">
-                    <div class="anim-logo logo-e">
-                        <div class="title right">
+                    <div class="col-md-4 anim-logo logo-e"></div>
+                    <div class="col-md-8 title right">
+                        <div class="title-item">
                             <h1>Expériences</h1>
+                            <div class="carousel slide" data-ride="carousel" data-interval="5000" pause="false">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <p>Développeur d'application (GE)</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>Développeur front-end (iTQ9)</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>Technicien R&D optique (iXblue)</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <!--<div class="subtitle">
-                            <h2>remi-papillier@hotmail.fr</h2>
-                        </div>-->
                     </div>
                 </div>
             </div>
             <div class="container c-right formations" routerLink="/formations">
                 <div class="row-content">
-                    <div class="anim-logo logo-f">
-                        <div class="title left">
+                    <div class="col-md-8 title left">
+                        <div class="title-item">
                             <h1>Formations</h1>
+                            <div class="carousel slide" data-ride="carousel" data-interval="5000" pause="false">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <p>Ingénieur informatique ISI</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>DUT Mesures Physiques</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>Baccalauréat scientifique</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <!--<div class="subtitle">
-                            <h2>remi-papillier@hotmail.fr</h2>
-                        </div>-->
                     </div>
+                    <div class="col-md-4 anim-logo logo-f"></div>
                 </div>
             </div>
             <div class="container c-left competences" routerLink="/competences">
                 <div class="row-content">
-                    <div class="anim-logo logo-c">
-                        <div class="title right">
+                    <div class="col-md-4 anim-logo logo-c"></div>
+                    <div class="col-md-8 title right">
+                        <div class="title-item">
                             <h1>Compétences</h1>
+
+                            <div class="carousel slide" data-ride="carousel" data-interval="5000" pause="false">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <p>Web - Html / CSS / JS</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>C# / Java / WP</p>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <p>Photoshop / Solidworks</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <!--<div class="subtitle">
-                            <h2>remi-papillier@hotmail.fr</h2>
-                        </div>-->
-                    </div>
-                </div>
-            </div>
-            <div class="container c-right apropos" routerLink="/apropos">
-                <div class="row-content">
-                    <div class="anim-logo logo-p">
-                        <div class="title left">
-                            <h1>À propos</h1>
-                        </div>
-                        <!--<div class="subtitle">
-                            <h2>remi-papillier@hotmail.fr</h2>
-                        </div>-->
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-2 empty-col"></div>
     </div>
 </section>
