--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,5 +1,10 @@
-<section>
+<section id="background">
         <div class="menu-row">
                 <app-menu></app-menu>
+            </div>
+            <div class="row">
+                    <div class="col-md-5"></div>
+                    <div class="col"></div>
+                    <div class="col-md-1"></div>
             </div>
 </section>
