--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,4 +1,4 @@
-section{
+section#background{
    background-image: url('../../assets/images/fond-bleu-fonce.jpg');
    height: 100%;
    background-position: center;
@@ -6,3 +6,4 @@ section{
    background-size: cover;
    z-index: 1;
 }
+
