--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="main">
         <div class="menu-row">
                 <app-menu></app-menu>
         </div>
@@ -6,89 +6,73 @@
                 <div class="col-md-1"></div>
                 <div class="col">
                         <div class="container">
-                                <ul class="timeline">
-                                        <li>
-                                                <div class="timeline-badge">
+                                <section id="timeline">
+                                        <article>
+                                                <div class="inner">
+                                                        <span class="date">
+                                                                <span class="month">Jan</span>
+                                                                <span class="year">2014</span>
+                                                        </span>
+                                                        <h2>The Title</h2>
+                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
+                                                                felis nec augue adipiscing, eget commodo libero mattis.
+                                                        </p>
                                                 </div>
-                                                <div class="timeline-panel">
-                                                        <div class="timeline-heading">
-                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                                                                <p><small class="text-muted"><i
-                                                                                        class="glyphicon glyphicon-time"></i>
-                                                                                11 hours ago via Twitter</small></p>
-                                                        </div>
-                                                        <div class="timeline-body">
-                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
-                                                                        adipiscings elitis. Pra lá , depois divoltis
-                                                                        porris, paradis. Paisis, filhis, espiritis
-                                                                        santis. Mé faiz elementum girarzis, nisi eros
-                                                                        vermeio, in elementis mé pra quem é amistosis
-                                                                        quis leo. Manduma pindureta quium dia nois paga.
-                                                                        Sapien in monti palavris qui num significa nadis
-                                                                        i pareci latim. Interessantiss quisso pudia ce
-                                                                        receita de bolis, mais bolis eu num gostis.</p>
-                                                        </div>
+                                        </article>
+                                        <article>
+                                                <div class="inner">
+                                                        <span class="date">
+                                                                <span class="month">Jan</span>
+                                                                <span class="year">2014</span>
+                                                        </span>
+                                                        <h2>The Title</h2>
+                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
+                                                                felis nec augue adipiscing, eget commodo libero mattis.
+                                                        </p>
                                                 </div>
-                                        </li>
-                                        <li class="timeline-inverted">
-                                                <div class="timeline-badge warning"></div>
-                                                <div class="timeline-panel">
-                                                        <div class="timeline-heading">
-                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                                                        </div>
-                                                        <div class="timeline-body">
-                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
-                                                                        adipiscings elitis. Pra lá , depois divoltis
-                                                                        porris, paradis. Paisis, filhis, espiritis
-                                                                        santis. Mé faiz elementum girarzis, nisi eros
-                                                                        vermeio, in elementis mé pra quem é amistosis
-                                                                        quis leo. Manduma pindureta quium dia nois paga.
-                                                                        Sapien in monti palavris qui num significa nadis
-                                                                        i pareci latim. Interessantiss quisso pudia ce
-                                                                        receita de bolis, mais bolis eu num gostis.</p>
-                                                                
-                                                        </div>
+                                        </article>
+                                        <article>
+                                                <div class="inner">
+                                                        <span class="date">
+                                                                <span class="month">Jan</span>
+                                                                <span class="year">2014</span>
+                                                        </span>
+                                                        <h2>The Title</h2>
+                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
+                                                                felis nec augue adipiscing, eget commodo libero mattis.
+                                                        </p>
                                                 </div>
-                                        </li>
-                                        <li>
-                                                <div class="timeline-badge danger"></div>
-                                                <div class="timeline-panel">
-                                                        <div class="timeline-heading">
-                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                                                        </div>
-                                                        <div class="timeline-body">
-                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
-                                                                        adipiscings elitis. Pra lá , depois divoltis
-                                                                        porris, paradis. Paisis, filhis, espiritis
-                                                                        santis. Mé faiz elementum girarzis, nisi eros
-                                                                        vermeio, in elementis mé pra quem é amistosis
-                                                                        quis leo. Manduma pindureta quium dia nois paga.
-                                                                        Sapien in monti palavris qui num significa nadis
-                                                                        i pareci latim. Interessantiss quisso pudia ce
-                                                                        receita de bolis, mais bolis eu num gostis.</p>
-                                                        </div>
+                                        </article>
+                                        <article>
+                                                <div class="inner">
+                                                        <span class="date">
+                                                                <span class="month">Jan</span>
+                                                                <span class="year">2014</span>
+                                                        </span>
+                                                        <h2>The Title</h2>
+                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
+                                                                felis nec augue adipiscing, eget commodo libero mattis.
+                                                        </p>
                                                 </div>
-                                        </li>
-                                        <li class="timeline-inverted">
-                                                <div class="timeline-panel">
-                                                        <div class="timeline-heading">
-                                                                <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                                                        </div>
-                                                        <div class="timeline-body">
-                                                                <p>Mussum ipsum cacilds, vidis litro abertis. Consetis
-                                                                        adipiscings elitis. Pra lá , depois divoltis
-                                                                        porris, paradis. Paisis, filhis, espiritis
-                                                                        santis. Mé faiz elementum girarzis, nisi eros
-                                                                        vermeio, in elementis mé pra quem é amistosis
-                                                                        quis leo. Manduma pindureta quium dia nois paga.
-                                                                        Sapien in monti palavris qui num significa nadis
-                                                                        i pareci latim. Interessantiss quisso pudia ce
-                                                                        receita de bolis, mais bolis eu num gostis.</p>
-                                                        </div>
+                                        </article>
+                                        <article>
+                                                <div class="inner">
+                                                        <span class="date">
+                                                                <span class="month">Jan</span>
+                                                                <span class="year">2014</span>
+                                                        </span>
+                                                        <h2>The Title</h2>
+                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                                Aenean quis rutrum nunc, eget dictum massa. Nam faucibus
+                                                                felis nec augue adipiscing, eget commodo libero mattis.
+                                                        </p>
                                                 </div>
-                                        </li>
-
-                                </ul>
+                                        </article>
+                                </section>
                         </div>
                 </div>
                 <div class="col-md-3" id="perso"><img id="perso1" src="../../assets/images/perso-formation.png"></div>
