--- a/src/app/formation/formation.component.scss
+++ b/src/app/formation/formation.component.scss
@@ -1,4 +1,4 @@
-section{
+section#main{
     background-image: url('../../assets/images/fond-bleu-ciel.jpg');
     height: 100%;
     background-position: center;
@@ -6,188 +6,172 @@ section{
     background-size: cover;
     z-index: 1;
 }
-ul{
-    padding-inline-start: 20px;
-}
+
 #perso1{
 height:80vh;
-margin-top: 3vh;
+margin-top: 6vh;
 }
+
 .row{
     display: flex;
 }
 
 .container{
-    height: 75vh;
-    margin-top: 8vh;
-    overflow: hidden;
     padding:0;
-    border-radius: 10px;
-    transition: all 0.5s ease-in-out;
-    background: linear-gradient(to top, rgba(0,0,0,0.6),rgba(0,0,0,0.2),rgba(0,0,0,0.1), rgba(0,0,0,0), rgba(0,0,0,0.1),rgba(0,0,0,0.2), rgba(0,0,0,0.6));
-    box-shadow: 0 0 20px 5px;
-}
-.container:hover{
-    transform: scale(1.03);
-}
-
-.timeline {
-    height: 100%;
+    margin:0;
+    margin-top:5vh;
+    height: 80vh;
+    overflow: hidden;
+    max-width: none;
+ }
+ 
+ section#timeline {
+    height:100%;
     width: 100%;
-    list-style: none;
+    margin-left:17px;
+    padding:10px;
     position: relative;
-    overflow-y: scroll;
-    box-sizing: content-box;
-}
+    overflow-y:scroll;
+    /*background-image: url('../../assets/images/perso-formation.png');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;*/
+  }
+ 
+  /*section#timeline:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 0;
+    margin: 0 0 0 -1px;
+    width: 2px;
+    height:100%;
+    background: rgba(0,0,0,0.2);
+  }*/
+  section#timeline article {
+    width: 100%;
+    margin: 0 0 20px 0;
+    position: relative;
+  }
+  section#timeline article:after {
+    content: '';
+    display: block;
+    clear: both;
+  }
+  section#timeline article div.inner {
+    width: 40%;
+    float: left;
+    margin: 5px 0 0 0;
+    border-radius: 6px;
+  }
+  section#timeline article div.inner span.date {
+    display: block;
+    width: 60px;
+    height: 60px;
+    padding: 5px 0;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin: 0 0 0 -32px;
+    border-radius: 100%;
+    font-size: 12px;
+    font-weight: 900;
+    text-transform: uppercase;
+    background: #25303B;
+    color: rgba(255,255,255,0.5);
+    border: 2px solid rgba(255,255,255,0.2);
+    box-shadow: 0 0 0 7px #25303B;
+  }
+  section#timeline article div.inner span.date span {
+    display: block;
+    text-align: center;
+  }
+  section#timeline article div.inner span.date span.day {
+    font-size: 10px;
+  }
+  section#timeline article div.inner span.date span.month {
+    font-size: 18px;
+  }
+  section#timeline article div.inner span.date span.year {
+    font-size: 10px;
+  }
+  section#timeline article div.inner h2 {
+    padding: 15px;
+    margin: 0;
+    color: #fff;
+    font-size: 20px;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    border-radius: 6px 6px 0 0;
+    position: relative;
+  }
+  section#timeline article div.inner h2:after {
+    content: '';
+    position: absolute;
+    top: 20px;
+    right: -5px;
+       width: 10px; 
+       height: 10px;
+    -webkit-transform: rotate(-45deg);
+  }
+  section#timeline article div.inner p {
+    padding: 15px;
+    margin: 0;
+    font-size: 14px;
+    background: #fff;
+    color: #656565;
+    border-radius: 0 0 6px 6px;
+  }
+  section#timeline article:nth-child(2n+2) div.inner {
+    float: right;
+  }
+  section#timeline article:nth-child(2n+2) div.inner h2:after {
+    left: -5px;
+  }
+  section#timeline article:nth-child(1) div.inner h2 {
+    background: #e74c3c;
+  }
+  section#timeline article:nth-child(1) div.inner h2:after {
+    background: #e74c3c;
+  }
+  section#timeline article:nth-child(2) div.inner h2 {
+    background: #2ecc71;
+  }
+  section#timeline article:nth-child(2) div.inner h2:after {
+    background: #2ecc71;
+  }
+  section#timeline article:nth-child(3) div.inner h2 {
+    background: #e67e22;
+  }
+  section#timeline article:nth-child(3) div.inner h2:after {
+    background: #e67e22;
+  }
+  section#timeline article:nth-child(4) div.inner h2 {
+    background: #1abc9c;
+  }
+  section#timeline article:nth-child(4) div.inner h2:after {
+    background: #1abc9c;
+  }
+  section#timeline article:nth-child(5) div.inner h2 {
+    background: #9b59b6;
+  }
+  section#timeline article:nth-child(5) div.inner h2:after {
+    background: #9b59b6;
+  }
 
-    .timeline:before {
-        top: 0;
-        bottom: 0;
-        position: absolute;
-        content: " ";
-        width: 3px;
-        background-color: black;
-        left: 51%;
-        margin-left: -1.5px;
+
+  @media screen and (max-width: 1025px){
+    .col{
+        background-image: url('../../assets/images/perso-formation.png');
+        background-position:  bottom;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
-
-    .timeline > li {
-        position: relative;
+    #perso{
+        display:none;
     }
-        .timeline > li:before,
-        .timeline > li:after {
-            content: " ";
-            display: table;
-        }
-        .timeline > li:after {
-            clear: both;
-        }
-        .timeline > li > .timeline-panel {
-            width: 46%;
-            float: left;
-            border: 1px solid #d4d4d4;
-            background-color: rgba(255,255,255,0.4);
-            border-radius: 2px;
-            padding: 20px;
-            margin: 20px;
-            position: relative;
-            -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-            box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-        }
-
-            .timeline > li > .timeline-panel:before {
-                position: absolute;
-                top: 26px;
-                right: -15px;
-                display: inline-block;
-                border-top: 15px solid transparent;
-                border-left: 15px solid #ccc;
-                border-right: 0 solid #ccc;
-                border-bottom: 15px solid transparent;
-                content: " ";
-            }
-
-            .timeline > li > .timeline-panel:after {
-                position: absolute;
-                top: 27px;
-                right: -14px;
-                display: inline-block;
-                border-top: 14px solid transparent;
-                border-left: 14px solid #fff;
-                border-right: 0 solid #fff;
-                border-bottom: 14px solid transparent;
-                content: " ";
-            }
-
-        .timeline > li > .timeline-badge {
-            color: #fff;
-            width: 50px;
-            height: 50px;
-            line-height: 50px;
-            font-size: 1.4em;
-            text-align: center;
-            position: absolute;
-            top: 16px;
-            left: 50%;
-            margin-left: -25px;
-            background-color: #999999;
-            z-index: 100;
-            border-top-right-radius: 50%;
-            border-top-left-radius: 50%;
-            border-bottom-right-radius: 50%;
-            border-bottom-left-radius: 50%;
-        }
-
-        .timeline > li.timeline-inverted > .timeline-panel {
-            float: right;
-        }
-
-            .timeline > li.timeline-inverted > .timeline-panel:before {
-                border-left-width: 0;
-                border-right-width: 15px;
-                left: -15px;
-                right: auto;
-            }
-
-            .timeline > li.timeline-inverted > .timeline-panel:after {
-                border-left-width: 0;
-                border-right-width: 14px;
-                left: -14px;
-                right: auto;
-            }
-
-.timeline-badge.primary {
-    background-color: #2e6da4 !important;
-}
-
-.timeline-badge.success {
-    background-color: #3f903f !important;
-}
-
-.timeline-badge.warning {
-    background-color: #f0ad4e !important;
-}
-
-.timeline-badge.danger {
-    background-color: #d9534f !important;
-}
-
-.timeline-badge.info {
-    background-color: #5bc0de !important;
-}
-
-@media (max-width: 1025px) {
-    .col-md-3,.col-md-1{
-        display: none;
+    .col-md-1{
+        display:none;
     }
-
-    ul.timeline > li > .timeline-panel {
-        width: calc(100% - 90px);
-        width: -moz-calc(100% - 90px);
-        width: -webkit-calc(100% - 90px);
-    }
-
-    ul.timeline > li > .timeline-badge {
-        left: 15px;
-        margin-left: 0;
-        top: 16px;
-    }
-
-    ul.timeline > li > .timeline-panel {
-        float: right;
-    }
-
-        ul.timeline > li > .timeline-panel:before {
-            border-left-width: 0;
-            border-right-width: 15px;
-            left: -15px;
-            right: auto;
-        }
-
-        ul.timeline > li > .timeline-panel:after {
-            border-left-width: 0;
-            border-right-width: 14px;
-            left: -14px;
-            right: auto;
-        }
 }
