--- a/src/app/competence/competence.component.html
+++ b/src/app/competence/competence.component.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-3">
-            <div class="container">
+            <!--<div class="container">
                 <div class="title"><h1>Languages</h1></div>
                 <div class="content">
                     <ul>
@@ -14,7 +14,7 @@
                         <li>C#, Java, C/C++, SQL</li>
                     </ul>
                     <ul>
-                            <h2>Linguistique</h2>
+                            <h3>Linguistique</h3>
                             <li>Francais</li>
                             <li>Anglais</li>
                     </ul>
@@ -34,7 +34,7 @@
                     <ul>
                         <h3>Developpement Web</h3>
                         <li>Angular, Ruby on Rails, Travis CI</li>
-                        <li>Wordpress (Divi)</li>
+                        <li>Bootstrap, Wordpress (Divi)</li>
                     </ul>
                     <ul>
                             <h3>General</h3>
@@ -48,7 +48,7 @@
                             <li>Solidworks</li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
         </div>
         <div class="col-md-1"></div>
     </div>
