--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,10 +1,20 @@
-<section id="background">
-        <div class="menu-row">
-                <app-menu></app-menu>
-            </div>
-            <div class="row">
-                    <div class="col-md-5"></div>
-                    <div class="col"></div>
-                    <div class="col-md-1"></div>
-            </div>
+<section id="home">
+        <div id="centered-circle">
+        </div>
+
+        <div class="item c1">
+                <div class="text">À propos</div>
+        </div>
+        <div class="item c2">
+                <div class="text">Expériences</div>
+        </div>
+
+        <div class="item c3">
+                <div class="text">Formations</div>
+        </div>
+        <div class="item c4">
+                <div class="text">Compétences</div>
+        </div>
+
 </section>
+
