--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -1,9 +1,117 @@
-section#background{
-   background-image: url('../../assets/images/fond-bleu-fonce.jpg');
-   height: 100%;
+
+#centered-circle{
+   position:fixed;
+   /*background-image: url('../../assets/images/logo-RP.png');
    background-position: center;
    background-repeat: no-repeat;
-   background-size: cover;
-   z-index: 1;
+   background-size: contain;*/
+   background-color: white;
+   border-radius: 50%;
+   top:50%;
+   left:50%;
+   width:70vh;
+   height:70vh;
+   margin-top:-35vh;
+   margin-left: -35vh;
+   border:1px solid black;
+   z-index: 5;
 }
 
+.text{
+   position: absolute;
+   font-family: comfortaa;
+   font-size: 3vw;
+   color: #FFF;
+   text-shadow: 2px 2px 2px black;
+}
+
+.item{
+   position: fixed;
+   background-position: center;
+   background-size: cover;
+   width:50%;
+   height: 50vh;
+   transition: filter 0.5s, width 0.5s,height 0.5s;
+   filter: grayscale(100%);
+
+    &:hover{
+      filter:none;
+      width:50.3%;
+      height:50.5vh;
+      z-index:2;
+    }
+}
+
+.c1{
+   top:0;
+   left:0;
+   background-image: url(https://placeimg.com/801/801/nature);
+   .text{
+      top:30%;
+      left: 23%;
+   }
+}
+
+.c2{
+   top:0;
+   right: 0;
+   background-image: url('../../assets/images/ge.jpg');
+   .text{
+      top:30%;
+      right: 17%;
+   }
+}
+
+.c3{
+   bottom:0;
+   left:0;
+   background-image: url(https://placeimg.com/803/803/nature);
+   .text{
+      bottom:30%;
+      left: 20%;
+   }
+}
+
+.c4{
+   bottom:0;
+   right:0;
+   background-image: url(https://placeimg.com/800/800/nature);
+   .text{
+      bottom:30%;
+      right: 15%;
+   }
+}
+
+@media screen and (max-width: 1025px){
+   #centered-circle{
+      width: 50vw;
+      height: 50vw;
+      margin-top: -25vw;
+      margin-left: -25vw;
+   }
+   .text{
+      font-size: 5vw;
+   }
+}
+
+@media screen and (max-width: 760px){
+   #centered-circle{
+      width: 60vw;
+      height: 60vw;
+      margin-top: -30vw;
+      margin-left: -30vw;
+   }
+   .text{
+      font-size: 5vw;
+   }
+   .c3{
+      .text{
+         left:18%;
+      }
+   }
+   .c4{
+      .text{
+         right:12%;
+      }
+   }
+}
