--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,5 +1,8 @@
 
 .nav{
+    /*position: fixed;
+    top:0;
+    width:100%;*/
     background-color:rgba(0,0,0,0.55);
     display: flex;
     justify-content: center;
